name:                chart
version:             0.0.0.1
synopsis:            Visualize habits using `diagrams`.
description:         Please see README.md
homepage:            http://github.com/bsummer4/chart
license:             AGPL-3
license-file:        LICENSE
author:              Benjamin Summers
maintainer:          ben@benjaminsummers.net
category:            Application
build-type:          Simple
cabal-version:       >=1.10

executable chart
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, diagrams, diagrams-svg, diagrams-lib,
                       base-unicode-symbols, containers, random
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/bsummer4/chart
