name:                chart
version:             0.0.0.1
synopsis:            Visualize habits using `diagrams`.
description:         Please see README.md
homepage:            http://github.com/bsummer4/chart
license:             AGPL-3
license-file:        LICENSE
author:              Benjamin Summers
maintainer:          ben@benjaminsummers.net
category:            Application
build-type:          Simple
cabal-version:       >=1.10

executable chart
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010
  build-depends:
    base, base-unicode-symbols, containers, diagrams, diagrams-lib,
    diagrams-svg, random, text, time

source-repository head
  type:     git
  location: https://github.com/bsummer4/chart
